# liferea

./: ChangeLog  configure.ac
glade/: gwget.ui  gwget_prefs.ui  prefs.ui
po/: POTFILES.in
src/: Makefile.am  conf.h  feed_parser.c  html.c
src/gwget/: Makefile.am  custom-cell-renderer-progressbar.c  custom-cell-renderer-progressbar.h  gwget-application-client.h  gwget-application-service.h  gwget-application-service.xml  gwget-application.c  gwget-application.h  gwget_data.c  gwget_data.h  gwget_download_manager.c  gwget_download_manager.h  main.c  main_window_cb.c  main_window_cb.h  new_window.c  new_window.h  systray.c  systray.h  utils.c  utils.h  wget-log.c  wget-log.h
src/gwget/data/: Makefile.am  gwget.desktop.in.in  org.gnome.gwget.service.in
